# warp-lambda-starter

./: .env  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build_libpq_layer_docker.sh  docker-compose.yaml  env.json  rust-toolchain.toml  template.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml
aws/: Makefile  build.toml  build_libpq_layer_docker.sh  samconfig.toml  template.yaml
aws/docker/: Dockerfile.build-sam  Makefile  build_libpq_layer_docker.sh
backend/: .env  Cargo.toml  Makefile  build.rs
backend/src/: db.rs  main.rs
backend/tests/: healthcheck.rs
docs/: index.md
libpq_layer/lib/: libpq.so.5.10
rust_app/: Cargo.toml
rust_app/src/: db.rs  lib.rs  main.rs
