# Cargo.toml

[workspace]
resolver = "2"
members = [
  "backend",
  ]

[workspace.dependencies]

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

warp = "0.3"
warp_lambda = "0.1.4"

openssl = { version = "0.10", features = ["vendored"] }
r2d2 = "0.8"
once_cell = "1.21.3"

# lettre = { version = "0.11.15", default-features = false, features = [
#   "tokio1",
#   "tokio1-rustls-tls",
#   "builder",
#   "smtp-transport"
# ] }

# reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
# diesel = { version = "2.2.7", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono", "numeric"] }
# diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
