# rust_app/Cargo.toml

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

diesel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

warp = { workspace = true }
warp_lambda = { workspace = true }

r2d2 = { workspace = true }
once_cell = { workspace = true }

# openssl = { workspace = true }
# lettre = { workspace = true }
