# rust_app/Cargo.toml

[package]
name = "sam_rust"
version = "0.1.0"
edition = "2021"
default-run = "bootstrap" # maps to the template.yaml artifact_executable_name: bootstrap

[[bin]]
name = "bootstrap" # maps to the template.yaml artifact_executable_name: bootstrap
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

warp = "0.3"
warp_lambda = "0.1.4"

openssl = { version = "0.10", features = ["vendored"] }
r2d2 = "0.8"
once_cell = "1.21.3"

[dev-dependencies]
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
